# soundpython

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/audiopy/: __init__.py  audio.py
src/soundpython/: audio.py
src/tests/: test_audio.py
