[project]
name = "audiopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest]
pythonpath = [".src/"]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"